<resources>
    <string name="app_name">CollegeCompanion</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginSubmit">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_index">Index</string>
    <string name="subject1">Subject1</string>
    <string name="subject2">Subject2</string>
    <string name="subject3">Subject3</string>
    <string name="subject4">Subject4</string>
    <string name="subject5">Subject5</string>
    <string name="subject6">Subject6</string>
    <string name="result">Result</string>
    <string name="cgpaValue">0.00</string>
    <string name="download">Download</string>
    <string name="getData">Get Data</string>
    <string name="dataTitle">Student Details</string>
    <string name="department">Department:</string>
    <string name="dob">Date Of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="Dname">Name:</string>
    <string name="id">Enter ID</string>
    <string name="cgpaTitle">CGPA</string>
    <string name="notesTitle">Notes</string>
    <string name="map">MAP</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="grades">
        <item>O</item>
        <item>A+</item>
        <item>A</item>
        <item>B+</item>
        <item>B</item>
        <item>C</item>
        <item>U</item>
    </string-array>
    <string name="title_activity_map">map</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ground">G</string>
    <string name="first_floor">1</string>
    <string name="second_floor">2</string>
    <string name="third_floor">3</string>
    <string name="college_companion">College Companion</string>
    <string name="menu">MENU</string>

</resources>