<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".data"
    android:background="@drawable/background">
    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/dataTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataTitle"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        android:textColor="@color/text"
        />
    <EditText
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:id="@+id/searchData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dataTitle"
        android:hint="@string/id"
        android:inputType="text"
        android:importantForAutofill="no"
        android:textColorHint="@color/white"
        />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/getDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn"
        android:text="@string/getData"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchData"
        app:cornerRadius="20dp"
        />
    <View
        android:layout_marginTop="20dp"
        android:id="@+id/ruler"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintTop_toBottomOf="@id/getDataButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/background"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textSize="25sp"
        android:id="@+id/nameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dname"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ruler"
        android:textColor="@color/white"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textSize="25sp"
        android:id="@+id/deptHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameHeading"
        android:textColor="@color/white"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textSize="25sp"
        android:id="@+id/genderHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deptHeading"
        android:textColor="@color/white"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textSize="25sp"
        android:id="@+id/dobHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderHeading"
        android:textColor="@color/white"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:textSize="25sp"
        android:id="@+id/nameHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ruler"
        android:textColor="#DDDDDD"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:textSize="25sp"
        android:id="@+id/deptHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameHolder"
        android:textColor="#DDDDDD"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:textSize="25sp"
        android:id="@+id/genderHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deptHolder"
        android:textColor="#DDDDDD"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:textSize="25sp"
        android:id="@+id/dobHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genderHolder"
        android:textColor="#DDDDDD"/>
</androidx.constraintlayout.widget.ConstraintLayout>